[tool.poetry]
name = "discourses-of-sustainable-transformation"
version = "0.1.0"
description = "Media discourses of a sustainable Norrland: journalism, places, and practices in transformation."
authors = ["roger-mahler <roger.mahler@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.11.*"
humlab-penelope = "^0.7.51"
bokeh = "^3.3.4"
click = "^8.1.7"
ipywidgets = "^8.1.2"
jupyterlab = "^4.1.1"
loguru = "^0.7.2"
matplotlib = "^3.8.2"
msgpack = "^1.0.7"
nltk = "^3.8.1"
pandas = "1.5.3"
pandas-bokeh = "^0.5.5"
scipy = "^1.12.0"
tqdm = "^4.66.2"
ipydatagrid = "^1.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
pylint = "^3.0.3"
pytest = "^8.0.0"
jupytext = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
